tests/paczka1/fuzzy1/18670201.err
Error in line 2: mQSp6X A311 91,8
Error in line 7: S781 S997 27,1
Error in line 11: S781 A881 52,6
